# mini-ai-agent

./: .gitignore  README.md  pyproject.toml
mini_ai_agent/: __init__.py  agent.py  cli.py  server.py
mini_ai_agent/static/: index.html
tests/: test_agent.py  test_server.py
